--- a/src/public/assets/styles/transects.css
+++ b/src/public/assets/styles/transects.css
@@ -1,5 +1,16 @@
-.color-sort-popup .color-picker {
-  height: 34px; }
+.color-sort-popup {
+  position: relative; }
+  .color-sort-popup.help {
+    min-height: 200px; }
+  .color-sort-popup .color-picker {
+    height: 34px;
+    padding: 0.25em 0.5em; }
+  .color-sort-popup .close-button {
+    position: absolute;
+    top: 0;
+    right: 1em;
+    background-color: rgba(255, 255, 255, 0.5);
+    font-weight: bold; }
 
 .available-colors-item {
   display: inline-block;
@@ -13,8 +24,20 @@
     padding: 3px;
     background-clip: content-box; }
 
+.new-color-form {
+  display: inline-block; }
+
 .available-colors-list {
   max-height: 150px;
   overflow-y: auto; }
+
+.color-sort-popup-help {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  background-color: white; }
 
 /*# sourceMappingURL=transects.css.map */
