--- a/src/resources/assets/sass/transects.scss
+++ b/src/resources/assets/sass/transects.scss
@@ -1,6 +1,21 @@
 .color-sort-popup {
+    position: relative;
+
+    &.help {
+        min-height: 200px;
+    }
+
     .color-picker {
         height: 34px;
+        padding: 0.25em 0.5em;
+    }
+
+    .close-button {
+        position: absolute;
+        top: 0;
+        right: 1em;
+        background-color: rgba(255, 255, 255, 0.5);
+        font-weight: bold;
     }
 }
 
@@ -20,7 +35,21 @@
     }
 }
 
+.new-color-form {
+    display: inline-block;
+}
+
 .available-colors-list {
     max-height: 150px;
     overflow-y: auto;
+}
+
+.color-sort-popup-help {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    background-color: white;
 }
