--- a/src/public/assets/styles/transects.css
+++ b/src/public/assets/styles/transects.css
@@ -20,9 +20,12 @@
   margin-right: 0.5em;
   cursor: pointer; }
   .available-colors-item:hover, .available-colors-item.active {
-    border: 1px solid #777;
     padding: 2px;
     background-clip: content-box; }
+  .available-colors-item:hover {
+    border: 1px solid #777; }
+  .available-colors-item.active {
+    border: 2px solid #337ab7; }
 
 .new-color-form {
   display: inline-block; }
@@ -42,7 +45,7 @@
   overflow-y: auto;
   background-color: white; }
 
-a.color-sort-list-group-item:hover {
+a.color-sort-list-group-item:hover, a.color-sort-list-group-item:focus, a.color-sort-list-group-item:active {
   background-color: transparent;
   cursor: default; }
 
