Implement color sort as part of the new sorting menu

--- a/src/public/assets/styles/transects.css
+++ b/src/public/assets/styles/transects.css
@@ -1,52 +1,1 @@
-.color-sort-popup {
-  position: relative; }
-  .color-sort-popup.help {
-    min-height: 200px; }
-  .color-sort-popup .color-picker {
-    height: 34px;
-    padding: 0.25em 0.5em; }
-  .color-sort-popup .close-button {
-    position: absolute;
-    top: 0;
-    right: 1em;
-    background-color: rgba(255, 255, 255, 0.5);
-    font-weight: bold; }
-
-.available-colors-item {
-  display: inline-block;
-  height: 25px;
-  width: 25px;
-  border-radius: 50%;
-  margin-right: 0.5em;
-  cursor: pointer; }
-  .available-colors-item:hover, .available-colors-item.active {
-    padding: 2px;
-    background-clip: content-box; }
-  .available-colors-item:hover {
-    border: 1px solid #777; }
-  .available-colors-item.active {
-    border: 2px solid #337ab7; }
-
-.new-color-form {
-  display: inline-block; }
-
-.available-colors-list {
-  white-space: nowrap;
-  overflow-x: auto;
-  margin-bottom: 0;
-  margin-top: .5em; }
-
-.color-sort-popup-help {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow-y: auto;
-  background-color: white; }
-
-a.color-sort-list-group-item:hover, a.color-sort-list-group-item:focus, a.color-sort-list-group-item:active {
-  background-color: transparent;
-  cursor: default; }
-
-/*# sourceMappingURL=transects.css.map */
+.color-sort-list-group-item .color-picker{width:30px;height:22px}.color-sort-list-group-item .available-colors-item{display:inline-block;height:25px;width:25px;border-radius:50%;margin-right:.5em;cursor:pointer}.color-sort-list-group-item .available-colors-item.active,.color-sort-list-group-item .available-colors-item:hover{padding:2px;background-clip:content-box}.color-sort-list-group-item .available-colors-item:hover{border:1px solid #777}.color-sort-list-group-item .available-colors-item.active{border:2px solid #337ab7}.color-sort-list-group-item .available-colors-list{white-space:nowrap;overflow-x:auto;margin-bottom:0;margin-top:.5em}
